refactor: 调整代码结构，建立Server层以及CollectService层

--- a/winstack_collect.yml
+++ b/winstack_collect.yml
@@ -3,6 +3,7 @@ logger:
   path: ./collector.log
 socket:
   socket_path: /var/run/ipc.state.report...
+test_model: false
 win_stack:
   concurrency: 50
   clouds:
